--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.2.0
 asgiref==3.8.1
+attrs==23.2.0
 billiard==4.2.0
 black==24.4.2
 blinker==1.8.2
@@ -17,6 +18,10 @@ django-debug-toolbar==4.4.6
 django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+flake8==7.1.0
+flake8-annotations==3.1.1
+flake8-quotes==3.4.0
+flake8-variables-names==0.0.6
 flower==2.0.1
 humanize==4.10.0
 idna==3.7
@@ -25,6 +30,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 kombu==5.3.7
 MarkupSafe==2.1.5
+mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
@@ -32,6 +38,8 @@ platformdirs==4.2.2
 pluggy==1.5.0
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
+pycodestyle==2.12.0
+pyflakes==3.2.0
 PyJWT==2.8.0
 pytest==8.3.1
 python-crontab==3.2.0
@@ -40,6 +48,7 @@ python-dotenv==1.0.1
 pytz==2024.1
 redis==5.0.7
 requests==2.32.3
+setuptools==71.1.0
 six==1.16.0
 sqlparse==0.5.1
 stripe==10.3.0
