--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-debug-toolbar==4.4.6
 django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
 flake8==7.1.0
 flake8-annotations==3.1.1
 flake8-quotes==3.4.0
@@ -25,9 +26,12 @@ flake8-variables-names==0.0.6
 flower==2.0.1
 humanize==4.10.0
 idna==3.7
+inflection==0.5.1
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 kombu==5.3.7
 MarkupSafe==2.1.5
 mccabe==0.7.0
@@ -46,8 +50,11 @@ python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
 redis==5.0.7
+referencing==0.35.1
 requests==2.32.3
+rpds-py==0.19.0
 setuptools==71.1.0
 six==1.16.0
 sqlparse==0.5.1
@@ -55,6 +62,7 @@ stripe==10.3.0
 tornado==6.4.1
 typing_extensions==4.12.2
 tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.2.2
 vine==5.1.0
 wcwidth==0.2.13
