--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,8 @@ platformdirs==4.2.2
 pluggy==1.5.0
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
+psycopg==3.2.1
+psycopg-binary==3.2.1
 pycodestyle==2.12.0
 pyflakes==3.2.0
 PyJWT==2.8.0
