Updated .env.sample file

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,20 @@
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token
 TELEGRAM_CHAT_ID=your-telegram-chat-id
+
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND = redis://redis:6379/0
+
+STRIPE_PUBLIC_KEY=STRIPE_PUBLIC_KEY
+STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
+STRIPE_SUCCESS_URL=STRIPE_SUCCESS_URL
+STRIPE_CANCEL_URL=STRIPE_CANCEL_URL
+
+POSTGRES_USER=POSTGRES_USER
+POSTGRES_PASSWORD=POSTGRES_PASSWORD
+POSTGRES_DB=POSTGRES_DB
+POSTGRES_HOST=POSTGRES_HOST
+POSTGRES_PORT=POSTGRES_PORT
+
+PGDATA=PGDATA
+
+DJANGO_SECRET_KEY=DJANGO_SECRET_KEY
